# sqs-resurrector

./: Dockerfile  LICENSE  README.md  circle.yml  sqs-resurector.cabal  sqs-resurrector.cabal  stack.yaml
app/: Main.hs
src/: Main.hs  Options.hs  Resurrector.hs
test/: Spec.hs
