name:                sqs-resurrector
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/haskell-works/sqs-resurrector#readme
license:             BSD3
license-file:        LICENSE
author:              Alexey Raga
maintainer:          alexey.raga@gmail.com
copyright:           Alexey Raga
category:            Services
build-type:          Simple
cabal-version:       >=1.10

executable sqs-resurrector
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , transformers
                     , monad-loops
                     , lens
                     , amazonka >= 1.3.5
                     , amazonka-core
                     , amazonka-sqs
