name:                sqs-resurrector
version:             0.2.0.0
synopsis:            SQS Deal Letter Queue messages resurrector
description:         Please see README.md
homepage:            http://github.com/haskell-works/sqs-resurrector#readme
license:             BSD3
license-file:        LICENSE
author:              Alexey Raga
maintainer:          alexey.raga@gmail.com
copyright:           Alexey Raga
category:            Services
build-type:          Simple
cabal-version:       >=1.10

executable sqs-resurrector
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , sqs-resurrector
                     , optparse-applicative
                     , text
                     , transformers
                     , monad-loops
                     , lens
                     , amazonka >= 1.3.5
                     , amazonka-core
                     , amazonka-sqs

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Options
                     , Resurrector
  build-depends:       base >= 4.7 && < 5
                     , text
                     , optparse-applicative
                     , transformers
                     , monad-loops
                     , lens
                     , amazonka >= 1.3.5
                     , amazonka-core
                     , amazonka-sqs

test-suite sqs-resurrector-test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  build-depends:       base  >= 4.7 && < 5
                     , text
                     , sqs-resurrector
                     , QuickCheck
                     , hspec
                     , optparse-applicative
                     , transformers
                     , monad-loops
                     , lens
                     , amazonka >= 1.3.5
                     , amazonka-core
                     , amazonka-sqs
